--- a/docs/part3/39.md
+++ b/docs/part3/39.md
@@ -296,7 +296,7 @@ $$
 
 前面提到如果$c$太大，$e^{cd}$可能会超过float的表示上界，但$c(d-z)$本身远小于$cd$，不容易越界。在不需要blur的情况下只需要在shadow map生成的时候保存d或者cd即可。
 
-但可以blur也是ESM的优点之一，为此我们需要在blur的部分进行改进。在[Lighting Research at Bungie](http://advances.realtimerendering.com/s2009/SIGGRAPH 2009 - Lighting Research at Bungie.pdf)中，提到了一种指数空间滤波的方式。首先对N个样本的加权求和有：
+但可以blur也是ESM的优点之一，为此我们需要在blur的部分进行改进。在[Lighting Research at Bungie](http://advances.realtimerendering.com/s2009/SIGGRAPH%202009%20-%20Lighting%20Research%20at%20Bungie.pdf)中，提到了一种指数空间滤波的方式。首先对N个样本的加权求和有：
 $$
 \begin{aligned}\sum_{i=0}^N w_i e^{cd_{o_i}}&=
 e^{cd_{o_0}}(w_0+\sum_{i=1}^Nw_i e^{c(d_{o_i}-d_{o_0})})\\
@@ -439,9 +439,9 @@ GPU Profile那边开Release来查看各个Pass下。至于EVSM和MSM等，可以
 
 [Cascade Shadow Maps--MSDN](https://docs.microsoft.com/en-us/windows/win32/dxtecharts/cascaded-shadow-maps)
 
-[Playing with Real-Time Shadows(Siggraph 2013)](https://www.realtimeshadows.com/sites/default/files/Playing with Real-Time Shadows_0.pdf)
+[Playing with Real-Time Shadows(Siggraph 2013)](https://www.realtimeshadows.com/sites/default/files/Playing%20with%20Real-Time%20Shadows_0.pdf)
 
-[Lighting Research at Bungie(Siggraph 2009)](http://advances.realtimerendering.com/s2009/SIGGRAPH 2009 - Lighting Research at Bungie.pdf)
+[Lighting Research at Bungie(Siggraph 2009)](http://advances.realtimerendering.com/s2009/SIGGRAPH%202009%20-%20Lighting%20Research%20at%20Bungie.pdf)
 
 [Advanced Soft Shadow Mapping Techniques(GDC 2008)](https://developer.download.nvidia.com/presentations/2008/GDC/GDC08_SoftShadowMapping.pdf)
 
