--- a/docs/part3/39.md
+++ b/docs/part3/39.md
@@ -414,7 +414,7 @@ GPU Profile那边开Release来查看各个Pass下。至于EVSM和MSM等，可以
 - LVSM(Layered Variance Shadow Maps)
 - ESM(Exponential Shadow Maps, 2008)
 - EVSM(Exponential Variance Shadow Maps)
-- MSM(Movement Shadow Maps, 2015)
+- MSM(Moment Shadow Maps, 2015)
 - Virtual Shadow Map(这个估计只能在DX12做)
 
 ## Variable-Size Penumbra
