--- a/docs/part3/39.md
+++ b/docs/part3/39.md
@@ -20,7 +20,7 @@
 $$
 f(d_r)=P(d_o\geq d_r)
 $$
-上式变成了一个概率分布函数，判断当前像素位于阴影中的概率。
+上式变成了一个概率分布函数，判断当前像素位于阴影之外的概率。
 
 假设occluder近似满足单峰分布，那么它可以由均值和方差表示。这两者可通过一阶**矩**(moment)和二阶矩所派生：
 $$
