--- a/docs/part2/21.md
+++ b/docs/part2/21.md
@@ -152,17 +152,14 @@ Ray Ray::ScreenToRay(const Camera & camera, float screenX, float screenY)
 }
 ```
 
-此外，在构造`Ray`对象的时候，还需要预先检测`direction`是否为单位向量：
+此外，在构造`Ray`对象的时候，还需要预先检测`direction`是否非0，然后归一化：
 ```cpp
 Ray::Ray(const DirectX::XMFLOAT3 & origin, const DirectX::XMFLOAT3 & direction)
 	: origin(origin)
 {
-	// 射线的direction长度必须为1.0f，误差在1e-5f内
-	XMVECTOR dirLength = XMVector3Length(XMLoadFloat3(&direction));
-	XMVECTOR error = XMVectorAbs(dirLength - XMVectorSplatOne());
-	assert(XMVector3Less(error, XMVectorReplicate(1e-5f)));
-
-	XMStoreFloat3(&this->direction, XMVector3Normalize(XMLoadFloat3(&direction)));
+	XMVECTOR dirVec = XMLoadFloat3(&direction);
+	assert(XMVector3NotEqual(dirVec, g_XMZero));
+	XMStoreFloat3(&this->direction, XMVector3Normalize(dirVec));
 }
 ```
 
