--- a/docs/part3/39.md
+++ b/docs/part3/39.md
@@ -86,7 +86,7 @@ float ChebyshevUpperBound(float2 moments,
 
 
 
-下面的代码将房差阴影写入级联：
+下面的代码将方差阴影写入级联：
 
 ```hlsl
 // Shadow.hlsl
@@ -512,7 +512,7 @@ EVSM具有如下优点：
 
 # 后记
 
-阴影本身就是一个巨大的坑。实际上搞这两章阴影就已经搞掉我很长时间了，加上中间还要忙各种事情，再往后的阴影效果现在暂时也没有耐心去实现，也许以后还会回来添砖加瓦。总体来说，VSM和ESM这些尝试拟合最开头图像函数的方法都难以避免出现漏光的问题，对于具有复杂深度的场景表现不尽如人意。这些方法可以放在级联等级较大，即距离较远的地方，当然也有人在远距离尝试使用距离场，这些都是遥远的后话了。
+阴影本身就是一个巨大的坑。总体来说，VSM和ESM这些尝试拟合最开头图像函数的方法都难以避免出现漏光的问题，对于具有复杂深度的场景表现不尽如人意。EVSM的总体效果更优，但对硬件要求也比较高。这些方法可以放在级联等级较大，即距离较远的地方，当然也有人在远距离尝试使用距离场，这些都是遥远的后话了。
 
 建议读者直接打开项目进行尝试，这里只解释部分可调参数的含义：
 
