--- a/docs/part3/37.md
+++ b/docs/part3/37.md
@@ -151,16 +151,41 @@ $$
 我们需要把这个平移分量放在第三行来抵掉z来实现目标子视锥体的构造：
 $$
 \begin{aligned}
-[x,y,z,1]\begin{bmatrix}
-s_w\cdot m_{00} & 0 & 0 & 0 \\
-0 & s_h\cdot m_{11} & 0 & 0 \\
+\begin{bmatrix}x & y & z & 1\end{bmatrix}\begin{bmatrix}
+s_x\cdot m_{00} & 0 & 0 & 0 \\
+0 & s_y\cdot m_{11} & 0 & 0 \\
 t_x & t_y & m_{22} & 1 \\
 0 & 0 & m_{32} & 0 \\
-\end{bmatrix}&=[s_w(m_{00}x)+t_x z,\; s_h(m_{11}y)+t_y z,\;m_{22}z+m_{32},\;z]\\
-&\Rightarrow[\frac{s_w(m_{00}x)}{z}+t_x\;,\frac{s_h(m_{11}y)}{z}+t_y\;,m_{22}+\frac{m_{32}}{z}\;, 1]
+\end{bmatrix}&=[s_x(m_{00}x)+t_x z,\; s_y(m_{11}y)+t_y z,\;m_{22}z+m_{32},\;z]\\
+&\Rightarrow[\frac{s_x(m_{00}x)}{z}+t_x\;,\frac{s_y(m_{11}y)}{z}+t_y\;,m_{22}+\frac{m_{32}}{z}\;, 1]
 \end{aligned}\\
 $$
 
+上面的z不管有没有缩放平移一直都在的，可以不管。
+
+接下来要确定缩放量和平移量。以下图为例，假设屏幕像素宽高为64x48，单个线程组的宽高为16x16，则线程组在NDC空间的划分如下：
+
+![07](..\assets\37\07.png)
+
+以线程组`(0, 0)`为例，对应左上角红色区域的子视锥体。要得到该子视锥体的投影矩阵，我们需要在原来投影矩阵的基础上进行缩放和平移，让红色区域覆盖NDC空间的`[-1, 1]x[-1, 1]`，首先是缩放：
+$$
+s_x =W/groupDim\\
+s_y=H/groupDim
+$$
+由于缩放后子视锥体的中心也被缩放了，我们可以先计算缩放前需要平移的量，然后再来缩放：
+$$
+t_x=s_x(1-\frac{groupDim}{W})\\
+t_y=s_y(-1+\frac{groupDim}{H})
+$$
+然后我们可以求出子视锥体的宽高来确定任意一个子视锥体需要的平移量，若线程组索引为G，则：
+$$
+\begin{aligned}
+t_x&=s_x(1-\frac{groupDim}{W}-G_x\frac{2\cdot groupDim}{W})\\
+&=s_x-1-2G_x\\
+t_y&=s_y(-1+\frac{groupDim}{H}-G_y\frac{2\cdot groupDim}{H})\\
+&=-s_y+1+2G_y
+\end{aligned}
+$$
 
 
 ### Gribb/Hartmann法提取视锥体平面
@@ -195,13 +220,13 @@ void ConstructFrustumPlanes(uint3 groupId, float minTileZ, float maxTileZ, out f
     // 只有当投影矩阵改变的时候才需要变化，因为我们是在观察空间执行，
     // 然后我们就只需要计算近/远平面来贴紧我们实际的几何体。
     
-    // 从[0, 1]中找出缩放/偏移
-    float2 tileScale = float2(g_FramebufferDimensions.xy) * rcp(float(2 * COMPUTE_SHADER_TILE_GROUP_DIM));
-    float2 tileBias = tileScale - float2(groupId.xy);
+    // 原Intel样例程序计算的Scale和Bias有误，这里重新推导了一遍
+    float2 tileScale = float2(g_FramebufferDimensions.xy) / COMPUTE_SHADER_TILE_GROUP_DIM;
+    float2 tileBias = tileScale - 1.0f - 2.0f * float2(groupId.xy);
 
     // 计算当前分块视锥体的投影矩阵
     float4 c1 = float4(g_Proj._11 * tileScale.x, 0.0f, tileBias.x, 0.0f);
-    float4 c2 = float4(0.0f, -g_Proj._22 * tileScale.y, tileBias.y, 0.0f);
+    float4 c2 = float4(0.0f, g_Proj._22 * tileScale.y, -tileBias.y, 0.0f);
     float4 c4 = float4(0.0f, 0.0f, 1.0f, 0.0f);
 
     // Gribb/Hartmann法提取视锥体平面
@@ -223,6 +248,8 @@ void ConstructFrustumPlanes(uint3 groupId, float minTileZ, float maxTileZ, out f
 
     // ...
 ```
+
+> **注意：上面的代码目前还没提交到项目源码中，需要读者先自行在源码中修改，虽然不修改的话在目前观感没有影响。**
 
 ## 光源剔除
 
