--- a/docs/part1/07.md
+++ b/docs/part1/07.md
@@ -1241,11 +1241,15 @@ Direct3D是基于状态机的，我们可以通过修改这些状态来修改渲
 
 光栅化阶段尽管是不可编程的，但在该阶段需要完成许多任务：
 
-1. 顶点着色器、几何着色器完成了顶点输出后，光栅化阶段会负责对前面传来的顶点数据，尤其是对4D位置向量(SV_POSITION)进行透视除法，判断顶点是否在NDC空间内。
-2. 其次，根据光栅化状态来决定顶点顺(逆)时针排布的三角形是否通过。
-3. 它还能指定额外的裁剪区域，即矩形区域外的三角形(或者部分)被裁剪掉，仅留下剩余在矩形区域内的像素片元传递到像素着色器中进行处理。
-4. 根据三角形的三个顶点，光栅化就可以通过线性插值法对顶点内的所有成员(如位置，颜色，法向量等)进行插值运算，并根据视口信息计算出位于三角形内的所有像素顶点以传递给像素着色器，也正因为如此你才能在第二章看到高洛德着色(Gouraud Shading)呈现的渐变效果。
-5. 由于光栅化阶段会进行视口变换，在像素着色器中，`SV_POSITION`的`x`分量和`y`分量都已经经过视口变换成为最终的屏幕坐标，且带有小数点`0.5`，这是因为要取到像素的中心位置，即对于800x600的视口区域，实际上的屏幕坐标取值范围为`[0.5, 799.5]x[0.5, 599.5]`，`z`分量取值范围为`[0, 1]`。这一点读者可以修改像素着色器使得`SV_POSITION`与像素颜色结果有关联，然后进入调试以验证。
+1. 顶点着色器、几何着色器完成了顶点输出后，光栅化阶段会负责对前面传来的顶点数据，尤其是对4D位置向量(SV_POSITION)进行处理。首先，根据光栅化状态来决定顶点顺(逆)时针排布的三角形是否通过，否则进行**三角形剔除**。
+2. 其次，对三角形的三个顶点进行**范围裁剪**，要求范围为：$-w\leq x\leq w; -w\leq y\leq w; 0\leq z\leq w; 0<w$ 。若存在部分点位于裁剪空间外，则需要通过一种特定的算法，计算与裁剪平面的交点的方式以保留位于裁剪空间内的多边形。 
+3. 进行**透视除法**，归一化W值。
+4. 根据剩下的三角形（裁剪得到的多边形实际上是多个三角形），进行某种**扫描**线遍历算法，找出位于三角形的所有像素，在这个过程中，根据三角形的三个顶点，光栅化就可以通过**透视校正插值法**对顶点内的所有成员(如位置，颜色，法向量等)进行插值运算，也正因为如此你才能在第二章看到高洛德着色(Gouraud Shading)呈现的渐变效果。
+5. 对透视除法后的坐标点进行**视口变换**，此时在像素着色器中`SV_POSITION`的`x`分量和`y`分量都已经经过视口变换成为最终的屏幕坐标，且带有小数点`0.5`，这是因为要取到像素的中心位置，即对于800x600的视口区域，实际上的屏幕坐标取值范围为`[0.5, 799.5]x[0.5, 599.5]`，这一点读者可以修改像素着色器使得`SV_POSITION`与像素颜色结果有关联，然后进入调试以验证。
+6. 如果开启**多重采样**的话也会在步骤4-5的时候进行，但这里不详细展开
+7. 如果开启了Scissor，我们需要指定额外的**裁剪矩形**(Scissor Rect)来确定保留区域， 由于裁剪矩形的区域是像素范围，需要在**视口变换后**进行。这时候会对**矩形区域外**的像素点丢弃掉。默认情况下这些三角形使用**第一个Scissor Rect**。非默认的情况可以自行查阅文档了解，这属于后面的内容。
+8. 对**深度值进行偏移**，在目前的章节我们不会使用，可以当做偏移为0。深度偏移是在**裁剪之后**进行的，通常用于阴影贴图。
+9. 最终这些像素点将会进入到像素着色阶段。
 
 ## ID3D11Device::CreateRasterizerState方法--创建光栅化状态
 
@@ -1257,9 +1261,9 @@ typedef struct D3D11_RASTERIZER_DESC
     D3D11_FILL_MODE FillMode;          // 填充模式
     D3D11_CULL_MODE CullMode;          // 裁剪模式
     BOOL FrontCounterClockwise;        // 是否三角形顶点按逆时针排布时为正面
-    INT DepthBias;                     // 忽略
-    FLOAT DepthBiasClamp;              // 忽略
-    FLOAT SlopeScaledDepthBias;        // 忽略
+    INT DepthBias;                     // 深度偏移相关，目前忽略
+    FLOAT DepthBiasClamp;              // 深度偏移相关，目前忽略
+    FLOAT SlopeScaledDepthBias;        // 深度偏移相关，目前忽略
     BOOL DepthClipEnable;              // 是否允许深度测试将范围外的像素进行裁剪，默认TRUE
     BOOL ScissorEnable;                // 是否允许指定矩形范围的裁剪，若TRUE，则需要在RSSetScissor设置像素保留的矩形区域
     BOOL MultisampleEnable;            // 是否允许多重采样
