--- a/docs/part1/04.md
+++ b/docs/part1/04.md
@@ -372,20 +372,20 @@ XMMATRIX XMMatrixLookAtLH(  // 输出视图变换矩阵V
 ![](..\assets\04\11.png)
 
 
-## 正交投影变换与规格化设备坐标（NDC）
+## 正交投影变换与标准化设备坐标（NDC）
 
 由于正交投影变换相对简单，放在这里先讲，也为了引出后面的内容。
 
 在经过观察变换后，此时我们来到了摄像机的局部空间，即摄像机位于原点，朝着+Z方向观察，上方向为+Y。我们要在这个基础上定义投影范围。观察上图，可以看到正交投影的可视范围是一个长方体，而且它是与坐标轴对齐的。我们可以对这个立方体进行平移，或者是缩放。只要物体落在立方体内且没有被遮挡，则最终投影出来的2D图片上我们是可以看到它的。
 
-而对于硬件来说，使用统一的规格化设备坐标，可以无需提前知道屏幕的宽高比来简化像素的映射操作。坐标点在经过正交投影后，w的值会保持为1，这时候规格化设备坐标的可视取值范围为：
+而对于硬件来说，使用统一的标准化设备坐标，可以无需提前知道屏幕的宽高比来简化像素的映射操作。坐标点在经过正交投影后，w的值会保持为1。这时候NDC空间的可视取值范围为：
 $$
 -1\leq x\leq 1\\
 -1\leq y\leq 1\\
 0\leq z\leq 1\\
 w=1
 $$
-这个范围正好也是表示一个立方体。有了这个区间范围，我们可以将它再变换到任意大小的2D矩形屏幕上。这个变换过程叫**视口变换**。
+这个范围正好也是表示一个立方体。有了这个区间范围，我们可以将它再变换到任意大小和位置的2D矩形上。这个变换过程叫**视口变换**。
 
 现在我们尝试求出以原点为中心的正交投影矩阵。定义可视立方体的宽度为w，高度为h，近平面位于z=n，远平面位于z=f.
 $$
@@ -619,9 +619,26 @@ n & 0 & 0 & 0 \\
 \end{aligned}
 $$
 
-### 归一化深度值、Direct3D裁剪范围
+### 齐次裁剪空间、归一化深度
 
-待投影操作完毕后，所有的投影点都会位于2D投影窗口上，从而构成视觉上可见的2D图像。看起来，我们似乎在此时就可以丢弃原始的3D z坐标了。然而，为了实现深度缓冲算法，我们仍需要保留这些3D深度信息。就像Direct3D希望将x、y坐标映射到归一化范围一样，深度坐标也要被映射到归一化区间[0, 1]以内。因此，我们必须构建一个保序函数g(z)，用来把z坐标从[n, f]映射到区间[0, 1]。由于该函数具有保序性，即如果$z_1, z_2 \in [n, f]$且$z_1<z_2$，那么$g(z_1)<g(z_2)$。也就是说，对深度值进行归一化处理后，深度关系保持不变。所以，在实现深度缓冲算法的过程中，我们仍能在归一化区间内正确地比较出不同点之间的深度关系。
+待投影操作完毕后，所有经过透视投影变换后的点`[x, y, z, w]` 被变换到了**齐次裁剪空间**。顾名思义， 光栅化期间需要对所有位于齐次裁剪空间的顶点进行裁剪判定，具体为：
+
+$$
+-w\leq x\leq w\\
+-w\leq y\leq w\\
+0\leq z\leq w\\
+0<w
+$$
+
+我们要特别留意这个$w>0$项，因为这个w实际上是处于观察空间的深度值，显然w不应该小于等于0，否则$0\leq z\leq w$就没有意义了，并且透视除法后w会被归一化了。正交投影时$w=1$，和前面的范围是对得上的。在完成裁剪后，光栅化阶段就会进行透视除法，对整个顶点向量除以w使得深度值能够归一化。经过透视除法后的顶点此时才真正的来到了**NDC空间**。重新梳理一遍，物体的空间变换过程为：
+
+**局部空间→世界空间→观察空间→齐次裁剪空间→标准化设备空间**
+
+分别对应的是：**世界矩阵变换、观察矩阵变换、透视矩阵变换、透视除法**
+
+当透视矩阵为正交时，所处的齐次裁剪空间与标准化设备空间是一致的，因为w=1
+
+然后我们来看看深度值是如何进行归一化的。首先，我们必须构建一个保序函数g(z)，用来把z坐标从[n, f]映射到区间[0, 1]。由于该函数具有保序性，即如果$z_1, z_2 \in [n, f]$且$z_1<z_2$，那么$g(z_1)<g(z_2)$。也就是说，对深度值进行归一化处理后，深度关系保持不变。所以，在实现深度缓冲算法的过程中，我们仍能在归一化区间内正确地比较出不同点之间的深度关系。
 
 虽然通过一次缩放和平移操作，便能将z坐标从[n, f]区间映射到[0, 1]区间。但是此方法却不能整合到我们当前的投影方案中去。在上式中，z坐标经过了以下变换的处理：
 $$
@@ -631,14 +648,7 @@ $$
 
 ![](..\assets\04\17.png)
 
-在顶点乘以投影矩阵后但还未进行透视除法之前，几何体会处于所谓的**齐次裁减空间**或**投影空间**之中。这时候就会在光栅化阶段进行裁剪。**Direct3D真正的裁剪范围为**：
-$$
--w\leq x\leq w\\
--w\leq y\leq w\\
-0\leq z\leq w\\
-0<w
-$$
-我们要特别留意这个$w>0$项，因为这个w实际上是处于观察空间的深度值，显然w不应该小于等于0，否则$0\leq z\leq w$就没有意义了，并且透视除法后w会被归一化了。正交投影时$w=1$，和前面的范围是对得上的。然后就可以进行透视除法了。紧接着还需要对透视除法后的坐标进行插值运算，由于g(z)函数是非线性的，使用线性插值法对深度的插值会出现问题。这就需要使用**透视校正插值法**来计算出正确的深度值，有兴趣的话作为练习题自行了解。
+紧接着还需要对透视除法后的坐标进行插值运算，由于g(z)函数是非线性的，使用线性插值法对深度的插值会出现问题。这就需要使用**透视校正插值法**来计算出正确的深度值，有兴趣的话作为练习题自行了解。
 
 在DirectXMath中，我们使用下面的函数来获得一个投影矩阵：
 
@@ -681,9 +691,9 @@ $$
 
 对于旋转矩阵，我们只使用`XMMatrixRotationZ`。
 
-## 正交投影变换与规格化设备坐标（NDC）
+## 正交投影变换与标准化设备坐标（NDC）
 
-正如前面所说的，规格化设备坐标的可视取值范围为：
+正如前面所说的，标准化设备坐标的可视取值范围为：
 $$
 -1\leq x\leq 1\\
 -1\leq y\leq 1\\
